--- a/manifest.json
+++ b/manifest.json
@@ -5,18 +5,18 @@
     "description": "Notes and AI insights for LeetCode problems.",
     "permissions": ["tabs", "activeTab"],
     "icons": {
-        "16": "icon_16.png",
-        "32": "icon_32.png",
-        "48": "icon_48.png",
-        "128": "icon_128.png"
+        "16": "images/icon_16.png",
+        "32": "images/icon_32.png",
+        "48": "images/icon_48.png",
+        "128": "images/icon_128.png"
     },
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
-            "16": "icon_16.png",
-            "32": "icon_32.png",
-            "48": "icon_48.png",
-            "128": "icon_128.png"
+            "16": "images/icon_16.png",
+            "32": "images/icon_32.png",
+            "48": "images/icon_48.png",
+            "128": "images/icon_128.png"
         }
     }
 }
