--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "LeetCode Mentor",
     "version": "2.0",
     "description": "Notes, AI insights, and personalized dashboard for LeetCode problems.",
-    "permissions": ["activeTab", "scripting", "storage", "tabs", "cookies"],
+    "permissions": ["activeTab", "scripting", "storage", "tabs"],
     "host_permissions": [
         "https://leetcode.com/*",
         "https://leetcode.com/graphql"
